--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "study node daily",
   "main": "server.js",
   "dependencies": {
-    "formidable": "^1.2.1"
+    "formidable": "^1.2.1",
+    "lodash": "^4.17.11"
   },
   "devDependencies": {},
   "scripts": {
